--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "googleapis": "^108.0.0"
+    "googleapis": "^108.0.0",
+    "node-fetch": "2",
+    "node-localstorage": "^2.2.1"
   },
   "name": "server",
   "version": "1.0.0",
@@ -11,7 +13,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js -e js"
+    "start": "node index.js -e js"
   },
   "keywords": [],
   "author": "",
